--- a/analytics/subgraph_config.json
+++ b/analytics/subgraph_config.json
@@ -1,3 +1,12 @@
 {
-	"importModels": ["GlobalCounter", "Quote", "Symbol", "User", "Account", "DebugEntity"]
+	"importModels": [
+		"GlobalCounter",
+		"Quote",
+		"Symbol",
+		"User",
+		"Account",
+		"Players",
+		"Affiliate",
+		"DebugEntity"
+	]
 }
